@@ -1,5 +1,5 @@
 #coding: utf-8
 
-__version__ = '0.3.11'
+__version__ = '0.3.12'
 
 from .db import *
